[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Enimies/Enimie.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enimie.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 14 )

[sub_resource type="Animation" id=2]
resource_name = "atack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enimie_Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 32, 32, 32 ), Rect2( 32, 32, 32, 32 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Enimie_Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 32, 32, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enimie_Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.164706 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enimie_Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 32, 32 ), Rect2( 32, 0, 32, 32 ), Rect2( 64, 0, 32, 32 ), Rect2( 96, 0, 32, 32 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 7 )

[node name="Enimie" type="RigidBody2D"]
collision_layer = 4
collision_mask = 3
mode = 2
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Enimie_Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )

[node name="Enimie_Collision" type="CollisionShape2D" parent="."]
position = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
playback_speed = 1.5
anims/atack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6, 11 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
